fixed positioning of video on iOS

--- a/app/phonegap/www/app.css
+++ b/app/phonegap/www/app.css
@@ -883,6 +883,7 @@ text-align: center;
 	left: 50%;
     margin-right: -50%;
     transform: translate(-50%);
+    -webkit-transform: translate(-50%);
 	z-index: 10;
 }
 
